--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <img src="./images/wwdo2.jpg"
                       alt="laptop with various design layouts on screen and hands holding smartphone"
                       width="370" />
-                      <p class="we-do-label">Mobil Apps</p>
+                      <p class="we-do-label">Mobile Apps</p>
                   </li>
                   <li class="we-do-item">
                     <img src="./images/wwdo3.jpg" 
