--- a/index.html
+++ b/index.html
@@ -466,8 +466,9 @@
             <use href="./images/icons.svg#icon-modal-envelope"></use>
           </svg>
          </label>
-        <label class="modal-label textarea-label">Comments
-          <textarea class="modal-textarea modal-text" id="textarea-placeholder" name="Comments" rows="7" placeholder="Enter the text"></textarea>
+        <label class="modal-label textarea-label">
+        <span class = "modal-lebel textarea-label-text">Comments</span>        
+        <textarea class="modal-textarea modal-text" id="textarea-placeholder" name="Comments" rows="7" placeholder="Enter the text"></textarea>
         </label> 
     <label class="agree-check">
     <input type="checkbox" class="checkmark" name="agreement" value="agree" />
