--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           </svg>
          </label>
         <label class="modal-label textarea-label">
-        <span class = "modal-lebel-text">Comments</span>        
+        <span class = "modal-label-text">Comments</span>        
         <textarea class="modal-textarea modal-text" id="textarea-placeholder" name="Comments" rows="7" placeholder="Enter the text"></textarea>
         </label> 
     <label class="agree-check">
